[build-system]
requires = [
  "setuptools >= 64.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "ecdh_kem"
version = "0.0.1-dev"
dependencies = [
    "argparse",
    "behave",
    "coverage",
    "cryptography",
    "wheel",
    ]

[project.scripts]
kem = "ecdh_kem:__main__"

[tool.setuptools]
py-modules = ["ecdh_kem"]
